<resources>
    <string name="app_name">MyFamilySafety</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="msg_sos">In case of emergency, keep telling family members to contact me.</string>
    <string name="guard">GUARD</string>
    <string name="msg_guard">Open when you are on a potentially dangerous journey.</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>